<?php

namespace App\Models;

use Illuminate\Database\Eloquent\Factories\HasFactory;
use Illuminate\Database\Eloquent\Model;
use Illuminate\Database\Eloquent\Relations\BelongsTo;

/**
 * Class MutasiStok
 * Tujuan: Mencatat setiap riwayat perubahan stok (masuk, keluar, penyesuaian).
 */
class MutasiStok extends Model
{
    use HasFactory;

    protected $table = 'mutasi_stok';

    protected $guarded = ['id'];

    public function produk(): BelongsTo
    {
        return $this->belongsTo(Produk::class, 'produk_id');
    }

    public function pengguna(): BelongsTo
    {
        return $this->belongsTo(Pengguna::class, 'oleh_pengguna_id');
    }
}
