<?php

namespace App\Models;

use Illuminate\Database\Eloquent\Model;

class SpesifikasiProduk extends Model
{
    protected $table = 'spesifikasi_produk';

    protected $guarded = ['id'];
}
